src/snapshots/din__parser__test_valid_arithmetic__add_multi.snap
---
source: src/parser.rs
expression: tree
---
main_function:
  statement:
    Return:
      Binary:
        op: Add
        l:
          Binary:
            op: Add
            l:
              Num: 9
            r:
              Num: 10
        r:
          Num: 11

