src/snapshots/din__parser__test_valid_arithmetic__mult.snap
---
source: src/parser.rs
expression: tree
---
main_function:
  statement:
    Return:
      Binary:
        op: Mult
        l:
          Num: 9
        r:
          Num: 10

